fix: tar conflict on setup-go

--- a/.github/workflows/go_golangci-lint.yml
+++ b/.github/workflows/go_golangci-lint.yml
@@ -40,6 +40,10 @@ jobs:
     timeout-minutes: 10
     name: "GolangCI Lint"
     steps:
+      # https://github.com/actions/setup-go/issues/424#issuecomment-2796487736
+      - name: Setup tar default options
+        shell: bash
+        run: echo "TAR_OPTIONS=--skip-old-files" >> $GITHUB_ENV
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
