--- a/.github/workflows/go_unit-test-tf-provider.yml
+++ b/.github/workflows/go_unit-test-tf-provider.yml
@@ -48,6 +48,10 @@ jobs:
     if: ${{ needs.check-test-requirements.outputs.need-test == 'true' }}
     runs-on: arc-runners
     steps:
+      # https://github.com/actions/setup-go/issues/424#issuecomment-2796487736
+      - name: Setup tar default options
+        shell: bash
+        run: echo "TAR_OPTIONS=--skip-old-files" >> $GITHUB_ENV
       - uses: actions/checkout@v4
         with:
           ref: ${{ inputs.ref }}
