--- a/.github/workflows/changelog_validation.yml
+++ b/.github/workflows/changelog_validation.yml
@@ -45,6 +45,10 @@ jobs:
     runs-on: arc-runners
     name: "Check changelog format"
     steps:
+      # https://github.com/actions/setup-go/issues/424#issuecomment-2796487736
+      - name: Setup tar default options
+        shell: bash
+        run: echo "TAR_OPTIONS=--skip-old-files" >> $GITHUB_ENV
       - uses: actions/checkout@v4 # v3.5.3
         with:
           token: ${{ secrets.TOKEN }}
