--- a/.github/workflows/release_publish-terraform-provider.yml
+++ b/.github/workflows/release_publish-terraform-provider.yml
@@ -25,6 +25,10 @@ jobs:
   publish-release:
     runs-on: arc-runners
     steps:
+      # https://github.com/actions/setup-go/issues/424#issuecomment-2796487736
+      - name: Setup tar default options
+        shell: bash
+        run: echo "TAR_OPTIONS=--skip-old-files" >> $GITHUB_ENV
       - id: checkout
         uses: actions/checkout@v4
         name: Checkout 
